# Capstone4

./: .gitignore  README.md  db.sqlite3  pyproject.toml
auth_app/: admin.py  forms.py  models.py  views.py
auth_app/migrations/: 0001_initial.py  0002_auto_20210413_1547.py  0002_auto_20210413_1713.py  0002_auto_20210413_1728.py  0002_auto_20210413_2109.py  0002_auto_20210413_2151.py  0002_auto_20210413_2254.py  0002_auto_20210419_1536.py  0002_auto_20210419_1752.py  0002_initial.py
backend/: admin.py  forms.py  models.py  views.py
backend/migrations/: 0001_initial.py  0002_auto_20210406_1806.py  0003_auto_20210406_2343.py  0004_auto_20210407_0042.py
capstone/: settings.py  urls.py
media/: HCA-430 Strategic Planning Memorandum_xunSSnB.docx
media/settings.MEDIA_URL/: 3_Page_Version.pages  Copy_of_Cover_Letter.docx
templates/: 404.html  500.html  base.html  favorites.html  file_list.html  footer.html  generic_form.html  homepage.html  index.html  login.html  navbar.html  search.html  signup.html  upload.html
